--- a/CSym.cabal
+++ b/CSym.cabal
@@ -20,9 +20,28 @@ extra-doc-files:    CHANGELOG.md
 common warnings
     ghc-options: -Wall
 
+library parser
+    import : warnings
+
+    build-depends:
+        base ^>=4.18.0.0
+        , array
+    
+    build-tool-depends: happy:happy, alex:alex
+
+    hs-source-dirs: parser
+
+    exposed-modules:
+        Parser
+        Lexer
+
+    default-language: Haskell2010
+
+
 executable CSym
     import:           warnings
     main-is:          Main.hs
-    build-depends:    base ^>=4.21.0.0
+    build-depends:    base ^>=4.18.0.0
+                      , CSym:parser
     hs-source-dirs:   app
     default-language: Haskell2010
