--- a/CSym.cabal
+++ b/CSym.cabal
@@ -26,6 +26,7 @@ library parser
     build-depends:
         base ^>=4.18.0.0
         , array
+        , GenericPretty
     
     build-tool-depends: happy:happy, alex:alex
 
